Fixed z-index while the map inside the editor is showing on top of a “Metadata” popup.

--- a/styles/coordinate-selector.css
+++ b/styles/coordinate-selector.css
@@ -29,3 +29,13 @@
   /*when hovering an item:*/
   background-color: #e9e9e9; 
 }
+
+.leaflet-top,
+.leaflet-bottom,
+.leaflet-pane {
+  z-index:99;
+}
+
+.h5p-mapselector-options {
+  margin: 0;
+}
